# image_bucket_S3

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: celery_app.py  manage.py
app/image_proc_api/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
app/projects/: admin.py  consumers.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/projects/migrations/: 0001_initial.py  0002_image_file_alter_image_project.py  0003_image_big_1920_image_image_big_thumb_image_and_more.py  0004_alter_image_thumb_image.py  0005_remove_image_big_1920_image_and_more.py
app/projects/service/: quorisets.py  resize.py
app/users/: serializers.py  urls.py  views.py
app/users/management/commands/: check_s3.py
nginx/: nginx.conf
tasks/: config.py  docker.py
